# CHROMODYNAMIC_ENGINE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Readme.md
CMakeModules/: VersionFromGit.cmake  util.cmake
Engine/: CMakeLists.txt
Engine/Include/: Define.hpp
Engine/Include/Core/: Errors.hpp  Event.hpp  for_now.hpp
Engine/Include/Core/Event/: ApplicationEvent.hpp  Event.hpp  EventListener.hpp  EventManager.hpp
Engine/Include/Core/Math/: Math.hpp
Engine/Include/Platform/: Platform.hpp
Engine/Include/Platform/Window/: Window.hpp  WindowWindows.hpp
Engine/Runtime/: CMakeLists.txt  main.cpp
Engine/Runtime/Application/: Application.cpp  Application.hpp  CMakeLists.txt
Engine/Source/: CMakeLists.txt
Engine/Source/Core/: CMakeLists.txt  Event.cpp  for_now.cpp
Engine/Source/Core/Event/: Event.cpp  EventManager.cpp
Engine/Source/Platform/: CMakeLists.txt  Platform.cpp
Engine/Source/Platform/Window/: WindowWindows.cpp
Tests/: CMakeLists.txt
Tests/YOUR_TEST_NAME/: CMakeLists.txt
